style: updated appearance fix: show logout confirmation dialog on mobile devices

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -283,12 +283,13 @@ hr {
 }
 
 #dropdown-menu {
-  background-color: #acc0c5;
+  background-color: #99b9c2;
   border: none;
   a {
     border-radius: 5px;
+    transition: all 0.2s ease;
     &:hover {
-      background-color: #96abaf;
+      background-color: #6f97a0;
     }
   }
 }
@@ -620,6 +621,7 @@ section.stats {
     float: left;
     padding: 0 10px;
     color: gray;
+    transition: all 0.2s ease;
     &:first-child {
       padding-left: 0;
     }
@@ -911,6 +913,8 @@ div.birthday {
 .pagination>li>a {
   border: none;
   color: #777;
+  border-radius: 50%;
+  transition: all 0.2s ease;
 }
 
 .pagination>.active>a {
@@ -1241,6 +1245,7 @@ aside {
     cursor: pointer;
     position: relative;
     color: #777;
+    transition: all 0.2s ease;
     &:hover {
       color: #333333;
     }
@@ -1564,9 +1569,10 @@ aside {
         width: 100px;
         outline: none;
         color: #fff;
-      }
-      &:hover {
-        opacity: .8;
+        transition: all 0.2s ease;
+        &:hover {
+          background-color: #6f97a0;
+        }
       }
     }
     .article-comment-text-area {
@@ -1595,27 +1601,31 @@ aside {
 }
 
 #dropdown-menu2 {
-  background-color: #acc0c5;
+  background-color: #99b9c2;
   border: none;
   a {
+    border-radius: 5px;
     color: #fff;
+    transition: all 0.2s ease;
     &:hover {
-      background-color: #96abaf;
+      background-color: #6f97a0;
     }
   }
 }
 
 ul.article-comment-option {
-  background-color: #acc0c5;
+  background-color: #99b9c2;
   border: none;
   right: 0;
   left: auto;
   li a {
     margin: 0 !important;
     color: #fff;
+    border-radius: 5px;
+    transition: all 0.2s ease;
     &:hover {
       color: #fff;
-      background-color: #96abaf;
+      background-color: #6f97a0;
     }
   }
 }
@@ -1655,6 +1665,10 @@ ul.article-comment-option {
   cursor: pointer;
   font-size: 14px;
   transition: background-color 0.2s ease, color 0.2s ease;
+  &:hover {
+    background-color: #6f97a0d6;
+    color: #fff;
+  }
 }
 
 .draft-toggle .toggle-button:not(:last-child) {
@@ -1761,6 +1775,7 @@ ul.article-comment-option {
     }
     .article-image-upload {
       height: 30px;
+      transition: all 0.2s ease;
       .fa-image {
         color: whitesmoke;
         cursor: pointer;
@@ -1807,6 +1822,7 @@ ul.article-comment-option {
   padding-bottom: 4px;
   color: whitesmoke;
   border: none;
+  transition: all 0.2s ease;
   &:hover {
     background-color: #96abaf;
     color: whitesmoke;
@@ -1816,6 +1832,7 @@ ul.article-comment-option {
 #edita {
   padding-bottom: 4px;
   color: whitesmoke;
+  transition: all 0.2s ease;
   &:hover {
     background-color: #96abaf;
   }
@@ -1829,6 +1846,7 @@ ul.article-comment-option {
   padding-bottom: 4px;
   color: whitesmoke;
   border: none;
+  transition: all 0.2s ease;
   &:hover {
     background-color: #96abaf;
     color: whitesmoke;
@@ -1861,8 +1879,9 @@ label {
   border-radius: 8px;
   background-color: #99b9c2;
   color: #fff;
+  transition: all 0.2s ease;
   &:hover {
-    opacity: .8;
+    background-color: #6f97a0;
     color: #fff;
   }
 }
@@ -2121,11 +2140,12 @@ label {
     border: none;
     outline: none;
     background-color: #99b9c2;
+    transition: all 0.2s ease; 
     color: #fff;
     width: 200px;
     height: 25px;
     &:hover {
-      opacity: .8;
+      background-color: #6f97a0;
     }
   }
 }
@@ -2537,12 +2557,13 @@ input.favorite_article_delete_btn {
   #dropdown-menu3 {
     border-radius: 10px;
     margin-right: 50px;
-    background-color: #acc0c5;
+    background-color: #99b9c2;
     border: none;
     a {
       border-radius: 5px;
+      transition: all 0.2s ease;
       &:hover {
-        background-color: #96abaf;
+        background-color: #6f97a0;
       }
     }
   }
